--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <header class="parent1">
             <img src="./jp img/logo.png" class="firstchild" alt="">
             <nav class="secondchild">
-                <span>
+                <span class="contain">
                     <a href="" class="line1">Home</a>
                     <a href="" class="line2">About</a>
                     <a href="" class="line3">Hire Me</a>
