--- a/index.html
+++ b/index.html
@@ -12,85 +12,83 @@
 
 <body>
     <main>
-
         <header class="parent1">
-            <img src="./jp img/logo.png" class="firstchild" alt="">
+            <div class="firstchild">
+                <img src="./jp img/logo.png"  alt="JP LOGO">
+            </div>
             <nav class="secondchild">
-                <span class="contain">
                     <a href="" class="line1">Home</a>
                     <a href="" class="line2">About</a>
                     <a href="" class="line3">Hire Me</a>
-                </span>
             </nav>
         </header>
-        
-        <div class="gparent">
-            <div class="gfirstchild">
-                <p class="gptext1">Welcome!</p>
-                <p class="gptext2">Sammy Jonathan</p>
-                <p class="gptext3">I am a developer with a passion for building
-                    innovative and user-friendly software applications.
-                    Here are information about my skills, experience,
-                    and the projects.</p>
-                <button>See My Projects</button>
 
-            </div>
-            <img src="./jp img/Teal And White Modern Website Creation Services Instagram Post 2.png"
-                class="gsecondchild" alt="">
+        <section class="gparent">
+                <div class="gfirstchild">
+                    <p class="gptext1">Welcome!</p>
+                    <p class="gptext2">Sammy Jonathan</p>
+                    <p class="gptext3">I am a developer with a passion for building
+                        innovative and user-friendly software applications.
+                        Here are information about my skills, experience,
+                        and the projects.</p>
+                    <button>See My Projects</button>
+                </div>
+                <div>
+                    <img src="./jp img/Teal And White Modern Website Creation Services Instagram Post 2.png" alt="Hero_img">
+                </div>
+        </section>
 
-        </div>
-        <div class="ggparent">
-            <img src="./jp img/pix.png" class="ggfirstchild" alt="">
-            <div class="ggsecondchild">
-                <h1>
-                    <p class="ggptext1">ABOUT ME</p>
-                </h1>
-                <p class="ggptext2">I have experience in a variety of
-                    programming languages such as Java, Python,
-                    JavaScript, and Ruby. I also have expertise in web development, including front-end development with
-                    HTML, CSS, and JavaScript, as well as back-end
-                    development with frameworks such as Ruby on Rails and Django.
-                </p>
+        <section class="ggparent">
+                <div >
+                    <img src="./jp img/pix.png" class="ggfirstchild" alt="about_img">
+                </div>
+                <div class="ggsecondchild">
+                    <h1 class="ggptext1">ABOUT ME
+                    </h1>
+                    <p class="ggptext2">I have experience in a variety of
+                        programming languages such as Java, Python,
+                        JavaScript, and Ruby. I also have expertise in web development, including front-end development
+                        with
+                        HTML, CSS, and JavaScript, as well as back-end
+                        development with frameworks such as Ruby on Rails and Django.
+                    </p>
+                </div>
+        </section>
 
-            </div>
-
-        </div>
-
-        <div class="posi">
+        <Section class="posi">
             <div class="posifirstchild">
                 <p class="positext">Projects</p>
-
                 <p>
                     I have completed several projects that demonstrate my skills and expertise. Some of these include:
-
-
+                </p>
                 <ul>
                     <li>A web-based chat application using React and Node.js.</li>
                     <li>A mobile application for tracking fitness goals using React Native and Firebase.</li>
                     <li>An e-commerce website using Ruby on Rails and Stripe.</li>
                 </ul>
-                </p>
-                <p>If you would like to see more examples of my work, please don't hesitate to contact me. I am always
+                <p>
+                    If you would like to see more examples of my work, please don't hesitate to contact me. I am always
                     looking for new and exciting projects to work on and would love to hear from you.
                 </p>
-                <p>Thank you for visiting my portfolio website.
+                <p>
+                    Thank you for visiting my portfolio website.
                 </p>
-
-
             </div>
+
             <div>
-                <img src="./jp img/frame.png" class="posisecondchild" alt="">
+                <img src="./jp img/frame.png" class="posisecondchild" alt="Project Frame">
             </div>
+        </Section>
 
-
-        </div>
         <footer class="gggparent">
-            <img src="./jp img/logo.png" class="gggfirstchild" alt="">
+            <div class="gggfirstchild">
+                <img src="./jp img/logo.png" alt="Just Project IMG">
+            </div>
 
             <div class="imgg">
-                <img src="./jp img/facebook.png" class="imgg1" alt="">
-                <img src="./jp img/twitter.png" class="imgg2" alt="">
-                <img src="./jp img/instgram.png" class="imgg3" alt="">
+                <img src="./jp img/facebook.png" class="imgg1" alt="Facebook">
+                <img src="./jp img/twitter.png" class="imgg2" alt="Twitter">
+                <img src="./jp img/instgram.png" class="imgg3" alt="Instgram">
             </div>
 
             <div class="sj">
