--- a/index.html
+++ b/index.html
@@ -14,45 +14,47 @@
     <main>
         <header class="parent1">
             <div class="firstchild">
-                <img src="./jp img/logo.png"  alt="JP LOGO">
+                <img src="./jp img/logo.png" alt="JP LOGO">
             </div>
             <nav class="secondchild">
+                <span>
                     <a href="" class="line1">Home</a>
                     <a href="" class="line2">About</a>
                     <a href="" class="line3">Hire Me</a>
+                </span>
             </nav>
         </header>
 
         <section class="gparent">
-                <div class="gfirstchild">
-                    <p class="gptext1">Welcome!</p>
-                    <p class="gptext2">Sammy Jonathan</p>
-                    <p class="gptext3">I am a developer with a passion for building
-                        innovative and user-friendly software applications.
-                        Here are information about my skills, experience,
-                        and the projects.</p>
-                    <button>See My Projects</button>
-                </div>
-                <div>
-                    <img src="./jp img/Teal And White Modern Website Creation Services Instagram Post 2.png" alt="Hero_img">
-                </div>
+            <div class="gfirstchild">
+                <p class="gptext1">Welcome!</p>
+                <p class="gptext2">Sammy Jonathan</p>
+                <p class="gptext3">I am a developer with a passion for building
+                    innovative and user-friendly software applications.
+                    Here are information about my skills, experience,
+                    and the projects.</p>
+                <button>See My Projects</button>
+            </div>
+            <div>
+                <img src="./jp img/Teal And White Modern Website Creation Services Instagram Post 2.png" alt="Hero_img">
+            </div>
         </section>
 
         <section class="ggparent">
-                <div >
-                    <img src="./jp img/pix.png" class="ggfirstchild" alt="about_img">
-                </div>
-                <div class="ggsecondchild">
-                    <h1 class="ggptext1">ABOUT ME
-                    </h1>
-                    <p class="ggptext2">I have experience in a variety of
-                        programming languages such as Java, Python,
-                        JavaScript, and Ruby. I also have expertise in web development, including front-end development
-                        with
-                        HTML, CSS, and JavaScript, as well as back-end
-                        development with frameworks such as Ruby on Rails and Django.
-                    </p>
-                </div>
+            <div>
+                <img src="./jp img/pix.png" class="ggfirstchild" alt="about_img">
+            </div>
+            <div class="ggsecondchild">
+                <h1 class="ggptext1">ABOUT ME
+                </h1>
+                <p class="ggptext2">I have experience in a variety of
+                    programming languages such as Java, Python,
+                    JavaScript, and Ruby. I also have expertise in web development, including front-end development
+                    with
+                    HTML, CSS, and JavaScript, as well as back-end
+                    development with frameworks such as Ruby on Rails and Django.
+                </p>
+            </div>
         </section>
 
         <Section class="posi">
