--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
             </div>
 
             <div class="sj">
-                <p> @2023 SAMMY JONATHAN </p>
+                <p> @2023 SAMMY JONATHAN.</p>
             </div>
         </footer>
     </main>
