--- a/index.html
+++ b/index.html
@@ -13,17 +13,47 @@
 <body>
     <main>
         <header class="parent1">
+
             <div class="firstchild">
                 <img src="./jp img/logo.png" alt="JP LOGO">
             </div>
-            <nav class="secondchild">
-                <span>
+            <div class="secondchild">
+
+                <div>
                     <a href="" class="line1">Home</a>
                     <a href="" class="line2">About</a>
                     <a href="" class="line3">Hire Me</a>
-                </span>
-            </nav>
+                </div>
+
+            </div>
+            
         </header>
+        <div class="header2">
+            <div class="firstchild">
+                <img src="./jp img/logo.png" alt="JP LOGO">
+            </div>
+            <nav class="nav">
+                <p class="p1">PROJECT</p>
+                <p class="underline">____________</p>
+                <p class="p2">ABOUT</p>
+                <p class="underline">____________</p>
+                <p class="p2">RESUME</p>
+                <p class="underline">____________</p>
+            </nav>
+
+            <div class="lines">
+                <div class="bar1">
+                    <div class="line line-one"></div>
+                </div>
+
+                <div class="bar2">
+                    <div class="line line-two"></div>
+                </div>
+                <div class="bar3">
+                    <div class="line line-three"></div>
+                </div>
+            </div>
+        </div>
 
         <section class="gparent">
             <div class="gfirstchild">
@@ -36,7 +66,8 @@
                 <button>See My Projects</button>
             </div>
             <div>
-                <img src="./jp img/Teal And White Modern Website Creation Services Instagram Post 2.png" alt="Hero_img">
+                <img src="./jp img/Teal And White Modern Website Creation Services Instagram Post 2.png"
+                    class="gsecondchild" alt="Hero_img">
             </div>
         </section>
 
@@ -98,6 +129,7 @@
             </div>
         </footer>
     </main>
+    <script src="./script.js"></script>
 </body>
 
 </html>
