--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             
         </header>
         <div class="header2">
-            <div class="firstchild">
+            <div class="firstchild2">
                 <img src="./jp img/logo.png" alt="JP LOGO">
             </div>
             <nav class="nav">
